rubocop/examples/bad/style_GlobalVars.rb
# Use module instance variables instead of global variables.

# bad
$foo_bar = 1
